# bouncy-ninja

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matematisk_modell_versionM.m
Matlab/: generalised_h.m  generaliserad_hv.m  matematisk_modell.m  matematisk_modell_anna.m  three_masses.m  two_masses_anna_h.m
documentation/: collision.tex  grid.tex  structure.tex  two_masses.tex
include/: Body.h  Boundary.h  CameraProp.h  GLShader.h  Mass.h  Vertex.h  bouncy_helpers.h
shaders/: floor.frag  floor.vert  main.frag  main.vert  main_fs.glsl  main_vs.glsl  simple.frag
src/: Body.cpp  Boundary.cpp  GLShader.cpp  Mass.cpp  Vertex.cpp  bouncy_helpers.cpp  main.cpp  objloader.cpp
